scripts/nullaway/annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8.txt
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/Element.java:52: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return namespaces;
		^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/Node.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return name;
		^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/PullReader.java:67: error: [NullAway] initializer method does not guarantee @NonNull field previous (line 52) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	PullReader(XmlPullParser parser) {
	^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/PullReader.java:100: error: [NullAway] assigning @Nullable expression to @NonNull field
		previous = next;
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/PullReader.java:108: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return next;
		^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/EventToken.java:59: error: [NullAway] method returns @Nullable, but superclass method org.jczh.appliedxml.EventNode.getName() returns @NonNull
   @Nullable public String getName() {
                           ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/ProviderFactory.java:57: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return provider;
		^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/XmlWriter.java:448: error: [NullAway] dereferenced expression value is @Nullable
		int size = value.length();
		                ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/TypeAdapterManager.java:183: error: [NullAway] passing @Nullable parameter 'unSerializedElement.getUnSerializedChildValue()' where @NonNull is required
							actualContentAdapter.write(writer, unSerializedElement.getUnSerializedChildValue());
							                                                                                ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/DocumentTreeBuilderFactory.java:190: error: [NullAway] passing @Nullable parameter 'fieldValue' where @NonNull is required
								element = constructor.construct(fieldValue);
								                                ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/MapTypeAdapterFactory.java:84: error: [NullAway] assigning @Nullable expression to @NonNull field
					valueName = containerDefine.value;
					          ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/MapTypeAdapterFactory.java:116: error: [NullAway] dereferenced expression keyName is @Nullable
								if (keyNode.isStart() && keyName.equals(keyNode.getName())) {
								                                ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:296: error: [NullAway] initializer method does not guarantee @NonNull field head (line 49) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  @Initializer private void preserveOrderForRemoval(TreeNode<K, V> p) {
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:85: error: [NullAway] dereferenced expression entry is @Nullable
      lastCompare = key.compareTo(entry.key);
                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:102: error: [NullAway] dereferenced expression parent is @Nullable
      parent.left = newEntry;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:104: error: [NullAway] dereferenced expression parent is @Nullable
      parent.right = newEntry;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:107: error: [NullAway] dereferenced expression tail is @Nullable
    tail.next = newEntry;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:116: error: [NullAway] dereferenced expression x.parent is @Nullable
    while (x != null && x != root && x.parent.color == RED) {
                                             ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:151: error: [NullAway] dereferenced expression root is @Nullable
    root.color = BLACK;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:199: error: [NullAway] dereferenced expression r is @Nullable
      p.right = r.left;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:219: error: [NullAway] dereferenced expression l is @Nullable
      p.left = l.right;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:252: error: [NullAway] dereferenced expression s is @Nullable
      p.key = s.key;
               ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:298: error: [NullAway] read of @NonNull field head before initialization
    if (p == head) {
             ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:299: error: [NullAway] assigning @Nullable expression to @NonNull field
      head = p.next;
           ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/LinkedTreeMap.java:488: error: [NullAway] assigning @Nullable expression to @NonNull field
      current = current.next;
              ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/$Gson$Types.java:425: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return genericDeclaration instanceof Class
    ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/$Gson$Types.java:447: error: [NullAway] assigning @Nullable expression to @NonNull field
      this.ownerType = ownerType == null ? null : canonicalize(ownerType);
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/$Gson$Types.java:548: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.lowerBound = null;
                        ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/com/google/gsoncode/internal/ConstructorConstructor.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../annotator/url400631cdd0_ludaiqian_appliedxml_tgz-pJ8-test_simples_TestJ8/src/org/jczh/appliedxml/ElementConstructorManager.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
28 errors
